Change how version is implemented

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = email-normalize
-version = attr: email_normalize.__version__.version
+version = file: VERSION
 description = Return a normalized email-address stripping ISP specific behaviors
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
