Use asynctest for mock compatibility with Python 3.7

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ zip_safe = true
 
 [options.extras_require]
 testing =
+    asynctest
     coverage
     flake8
     flake8-comprehensions
@@ -49,7 +50,6 @@ testing =
     flake8-quotes
     flake8-rst-docstrings
     flake8-tuple
-    mypy
     pygments
 
 [coverage:run]
