Update CONTRIBUTING documentation, classifiers

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,9 @@ project_urls =
 author = Gavin M. Roy
 author_email = gavinmroy@gmail.com
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
+    Framework :: AsyncIO
     License :: OSI Approved :: BSD License
     Natural Language :: English
     Operating System :: OS Independent
@@ -23,6 +24,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Topic :: Communications
+    Topic :: Communications :: Email
     Topic :: Internet
     Topic :: Software Development
     Typing :: Typed
