Fix normalization for multi-segment TLDs using Fastmail

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ keywords =
 include_package_data = True
 install_requires =
     aiodns
+    tldextract
 packages =
     email_normalize
 zip_safe = true
