--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 3
     strategy:
       matrix:
-        python: [3.7, 3.8, 3.9]
+        python: ['3.8', '3.9']
     container:
       image: python:${{ matrix.python }}-alpine
     steps:
